allowing all origins for NOW